# spm

./: .goreleaser.yaml  Cargo.toml  README.md  mise.toml  test_e2e.sh
src/: cli.rs  config.rs  git.rs  main.rs  project.rs  shell.rs  storage.rs
src/cli/: mod.rs
src/cli/commands/: add.rs  config.rs  list.rs  mod.rs  pick.rs  remove.rs  tag.rs
src/utils/: mod.rs  terminal.rs
src/version_check/: github_api.rs  mod.rs
