[package]
name = "spm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
git2 = "0.20"
indoc = "2.0"
inquire = { version = "0.9", features = ["fuzzy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
fuzzy-matcher = "0.3"
thiserror = "2.0"
