[package]
name = "spm"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }
indoc = "2.0"
inquire = { version = "0.9", features = ["fuzzy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
frizbee = "0.8.2"
semver = "1.0.27"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
strum_macros = "0.28.0"
